--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore Jupyter Notebook checkpoints
+**/*.ipynb_checkpoints/
+
 ##############################
 # TeX specific ignored files #
 ##############################
